<resources>
    <string name="app_name">BattleScribe</string>
    <string name="title">BattleScribe</string>
    <string name="chooseLine">Scegli la tua armata</string>
    <string name="Tau">IMPERO TAU</string>
    <string name="Orks">ARMATA ORKI</string>
    <string name="Marines">SPACE MARINES</string>
    <string name="Necrons">ARMATA NECRONS</string>
    <string name="String1">Tau:</string>
    <string name="String2">Orks:</string>
    <string name="String3">Space Marines:</string>
    <string name="String4">Necrons</string>
    <string name="TauTitle">Truppe Tau</string>
    <string name="OrkTitle">Truppe Orks</string>
    <string name="NecronsTitle">Truppe Necrons</string>
    <string name="Minus1">-</string>
    <string name="Plus1">+</string>
    <string name="BaseTau">XV8 CRISIS x3</string>
    <string name="Centurione">Centurion x3</string>
    <string name="truppa_base">Truppa base x1</string>
    <string name="generale">Generale Tau x1</string>
    <string name="TitoloSp">Truppe Space Marines</string>
    <string name="generaleSp">Generale Space Marines x1</string>
    <string name="Codicer">Codicier x5</string>
    <string name="drone">Drone x2</string>
    <string name="Apprentek">Apprentek x1</string>
    <string name="BaseOrk">Tin boyz x3</string>
    <string name="BaseNecrons">Truppa base Necrons x3</string>
    <string name="truppa_Orks">Truppa base Orks x1</string>
    <string name="generaleOrks">Generale Ork x1</string>
    <string name="generaleNecrons">Generale Necrons x1</string>
    <string name="goblin">goblin x5</string>
    <string name="immortal">Immortal x5</string>
    <string name="pBase">%1$d</string>
    <string name="pRobot">%1$d</string>
    <string name="pGenerali">%1$d</string>
    <string name="pDroni">%1$d</string>
    <string name="Base">il numero di truppe base è:</string>
    <string name="Robot">il numero di robot è:</string>
    <string name="Generali">il numero di generali è:</string>
    <string name="Droni">il numero di droni è:</string>
    <string name="TinBoy">il numero di tin boyz è:</string>
    <string name="ApprentekNumber">il numero di Apprentek è:</string>
    <string name="goblinsT">il numero di goblin è:</string>
    <string name="Immortal">il numero di Immortal è:</string>
    <string name="StringCenturion">il numero di Centurion è:</string>
    <string name="StringCodicer">il numero di Codicer è:</string>
    <string name="point">il numero di punti spesi è:</string>
    <string name="imageDescription">Logo truppa SpaceMarines</string>
    <string name="bottonePiu">Bottone più</string>
    <string name="bottoneMeno">Bottone meno</string>
    <string name="numberP">%1$d</string>
    <string name="numberDescr">Indicatore numerico delle truppe</string>
    <string name="Save">Salva</string>
    <string name="visualizza_salvataggi">visualizza salvataggi</string>
    <string name="storico_punti">Storico Punti</string>
    <string name="immagine_logo_applicazione">Immagine logo applicazione</string>
    <string name="back_page">back page</string>
    <string name="version">version</string>


</resources>