<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">


        <include layout="@layout/my_toolbar" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/immagine_logo_applicazione"
            app:srcCompat="@drawable/mainimg" />


        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="?colorOnSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".activities.MainActivity">

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorOnSecondary" />

            <TextView
                android:id="@+id/choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chooseLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?colorOnSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorOnSecondary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/String1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?colorOnSecondary" />

            <Button
                android:id="@+id/Tau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:padding="20dp"
                android:text="@string/Tau"
                android:textColor="?colorOnSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorOnSecondary" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/String2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?colorOnSecondary" />

            <Button
                android:id="@+id/Orks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:padding="20dp"
                android:text="@string/Orks"
                android:textColor="?colorOnSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorOnSecondary" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/String3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?colorOnSecondary" />

            <Button
                android:id="@+id/SpaceMarine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:padding="20dp"
                android:text="@string/Marines"
                android:textColor="?colorOnSecondary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?colorOnSecondary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/String4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?colorOnSecondary" />

            <Button
                android:id="@+id/Necrons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:padding="20dp"
                android:text="@string/Necrons"
                android:textColor="?colorOnSecondary" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>